[package]
name = "jsonrpc"
version = "0.12.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/apoelstra/rust-jsonrpc/"
repository = "https://github.com/apoelstra/rust-jsonrpc/"
documentation = "https://docs.rs/jsonrpc/"
description = "Rust support for the JSON-RPC 2.0 protocol"
keywords = [ "protocol", "json", "http", "jsonrpc" ]
readme	 = "README.md"

[lib]
name = "jsonrpc"
path = "src/lib.rs"

[features]
default = [ "simple_http", "simple_tcp" ]
# A bare-minimum HTTP transport.
simple_http = [ "base64-compat" ]
# Basic transport over a raw TcpListener
simple_tcp = []
# Basic transport over a raw UnixStream
simple_uds = []


[dependencies]
serde = "1"
serde_derive = "1"
serde_json = { version = "1", features = [ "raw_value" ] }

base64-compat = { version = "1.0.0", optional = true }

