[package]
name = "jsonrpc"
version = "0.15.0-rc0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/apoelstra/rust-jsonrpc/"
repository = "https://github.com/apoelstra/rust-jsonrpc/"
documentation = "https://docs.rs/jsonrpc/"
description = "Rust support for the JSON-RPC 2.0 protocol"
keywords = [ "protocol", "json", "http", "jsonrpc" ]
readme	 = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "jsonrpc"
path = "src/lib.rs"

[features]
default = [ "simple_http", "simple_tcp" ]
# A bare-minimum HTTP transport.
simple_http = [ "base64" ]
# Basic transport over a raw TcpListener
simple_tcp = []
# Basic transport over a raw UnixStream
simple_uds = []
# Enable Socks5 Proxy in transport
proxy = ["socks"]

# transport implementations
tp-hyper = [ "hyper" ]

[dependencies]
async-trait = "0.1.53"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = [ "raw_value" ] }
erased-serde = "0.3.20"

base64 = { version = "0.13.0", optional = true }
socks = { version = "0.3.4", optional = true}

hyper = { version = "0.14.0", features = [ "client", "http1" ], optional = true }
